--- a/_posts/2017-08-25-foss4g_nor.md
+++ b/_posts/2017-08-25-foss4g_nor.md
@@ -5,10 +5,10 @@ image: /img/qgis-nor-icon.svg
 tags: [konferanse]
 ---
 
-Torsdag, 31.08.2017 er det [FOSS4G-NOR](foss4g.no) konferanse på Aker Brygge Oslo.
-Konferansen har mottoen: "Entusiastiske teknologer samles for å prate om åpenhet"
+Torsdag, 31.08.2017 er det [FOSS4G-NOR](http://foss4g.no) konferanse på Aker Brygge Oslo.
+Konferansen har mottoen: "Entusiastiske teknologer samles for å prate om åpenhet". 
 Der blir det flere innlegg på QGIS og andre spennende åpen kildekode prosjekter.
 
-Programm og påmelding finnes på [foss4g.no](foss4g.no)
+Programm og påmelding finnes på [foss4g.no](http://foss4g.no)
 
 Vel møtt!
